--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,19 +5,19 @@
 }
 
 html {
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
+  position: relative;
   min-height: 100%;
-  background: #000;
 }
 
 .App {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 60px 0;
+  padding: 60px 0 92px;
 }
 
 .header {
@@ -56,6 +56,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  height: 92px;
   padding: 0 20px;
   text-align: center;
   background: #fff;
@@ -68,5 +69,35 @@ body {
 
 .wrap {
   min-height: 100%;
-  background: green;
+}
+
+.courses_list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0 10px 10px;
+  list-style: none;
+}
+
+.course_card__wrapper {
+  width: 32%;
+  padding: 10px 0 0;
+}
+
+.course_card {
+  padding: 10px;
+  border: solid 1px #333;
+  border-radius: 10px;
+  width: 100%;
+}
+
+.course_card__title {
+  padding: 0 0 5px;
+  font-weight: 700;
+
+  em {
+    font-weight: normal;
+    font-size: 0.85em;
+  }
 }
