--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,7 +13,7 @@ body {
   min-height: 100%;
 }
 
-.App {
+.wrap {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -67,7 +67,7 @@ body {
   text-align: center;
 }
 
-.wrap {
+main {
   min-height: 100%;
 }
 
