--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -72,6 +72,10 @@ code {
       background-color: #0d6efd;
     }
   }
+}
+
+.course_search {
+  padding: 0 15px 10px;
 
   input {
     display: block;
