--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -154,18 +154,18 @@ code {
   }
 }
 
-.loginForm {
+.loginForm,
+.addNewCourseForm {
   width: 100%;
   max-width: 300px;
   margin: 0 auto;
   text-align: center;
 
-  input {
+  .form-control {
     position: relative;
     display: block;
     width: 100%;
-    height: 3.5rem;
-    padding: 1rem;
+    padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -189,6 +189,10 @@ code {
     }
   }
 
+  input {
+    height: 3.5rem;
+  }
+
   input[type="text"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
@@ -205,26 +209,17 @@ code {
     margin-top: 20px;
   }
 
-  .form-floating>.form-control:focus~label, .form-floating>.form-control:not(:placeholder-shown)~label, .form-floating>.form-select~label {
+  textarea {
+    margin-top: 20px;
+    font-family: inherit;
+    resize: vertical;
+  }
+
+  .form-floating>.form-control:focus~label,
+  .form-floating>.form-control:not(:placeholder-shown)~label,
+  .form-floating>.form-select~label {
     opacity: .65;
     transform: scale(.85) translateY(-.5rem) translateX(.15rem);
-}
-  .form-control {
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   }
 }
 
@@ -263,6 +258,12 @@ code {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-lg {
