--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -29,6 +29,10 @@ code {
   flex-grow: 1;
 }
 
+main {
+  padding: 20px 0;
+}
+
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -118,6 +122,11 @@ code {
   padding: 10px 0 0;
 }
 
+.courses_showmore {
+  padding: 0 0 10px;
+  text-align: center;
+}
+
 .course_card {
   position: relative;
   top: 0;
@@ -147,11 +156,12 @@ code {
 .course_card__title {
   padding: 0 0 5px;
   font-weight: 700;
+}
 
-  em {
-    font-weight: normal;
-    font-size: 0.85em;
-  }
+.course_card__date {
+  padding: 0 0 5px;
+  font-weight: normal;
+  font-size: 0.75em;
 }
 
 .loginForm,
