--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -36,7 +36,7 @@ main {
 .header {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 0 20px;
   background: #fff;
